--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ Online HTML, CSS and JavaScript editor to run code online.
 									</header>
 									<p>제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  ㅍ</p>
 									<ul class="actions">
-										<li><a href="landing - 복사본.html" class="button next">시작하기</a></li>
+										<li><a href="FullscreenScroll-main/src/index.html" class="button next">시작하기</a></li>
 									</ul>
 								</div>
 							</section>
