--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 		<meta name="author" content="Codrops" />
 		<link rel="shortcut icon" href="favicon.ico">
 		<link rel="stylesheet" href="https://use.typekit.net/zns7sax.css">
-		<link rel="stylesheet" type="text/css" href="assets/css/base.css" />
+		<link rel="stylesheet" type="text/css" href="css/base.css" />
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 		<script src="//tympanus.net/codrops/adpacks/analytics.js"></script>
 	</head>
@@ -22,11 +22,11 @@
 					<a aria-label="Back to the article" class="frame__title-back" href="https://tympanus.net/codrops/?p=64521"><span>&rarr;</span></a> 
 				</div>
 				<nav class="frame__nav">
-					<button class="frame__nav-button unbutton">Stronger</button>
-					<button class="frame__nav-button unbutton">No choice</button>
-					<button class="frame__nav-button unbutton">Owned no longer</button>
-					<button class="frame__nav-button unbutton">Assert control</button>
-					<button class="frame__nav-button unbutton">Cold &amp; detached</button>
+					<button class="frame__nav-button unbutton">1번내용</button>
+					<button class="frame__nav-button unbutton">2번내용</button>
+					<button class="frame__nav-button unbutton">3번내용</button>
+					<button class="frame__nav-button unbutton">4번내용</button>
+					<button class="frame__nav-button unbutton">5번내용</button>
 				</nav>
 				<button class="frame__back unbutton">
 					<span data-splitting>&larr; Go back</span>
