--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 									</header>
 									<p>제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  ㅍ</p>
 									<ul class="actions">
-										<li><a href="/src/index.html" class="button next">시작하기</a></li>
+										<li><a href="html5up-multiverse/index.html" class="button next">시작하기</a></li>
 									</ul>
 								</div>
 							</section>
