--- a/html5up-multiverse/index.html
+++ b/html5up-multiverse/index.html
@@ -67,10 +67,10 @@
 						<div class="inner split">
 							<div>
 								<section>
-									
+									<h2></h2>
 									<ul class="links">
 										<li><a href="index.html">Home</a></li>
-										<li><a href="html5up-multiverse/index.html">Landing</a></li>
+										<li><a href="html5up-multiverse/index.html">학교소개홈페이지</a></li>
 									</ul>
 									<h2>Magna feugiat sed adipiscing</h2>
 									<p>Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum eget quis orci mattis aliquet. Maecenas fringilla et ante at lorem et ipsum. Dolor nulla eu bibendum sapien. Donec non pharetra dui. Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum.</p>
