--- a/html5up-multiverse/index.html
+++ b/html5up-multiverse/index.html
@@ -32,18 +32,23 @@
 					<div id="main">
 						<article class="thumb">
 							<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt="" /></a>
-							<h2>Magna feugiat lorem</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>교화</h2>
+							<p>진달래의 꽃말은 '절제'로 항상 절제하며 불굴의 용기와 자신감을 가지고 학업에 정진하라는 의미를 담고 있다.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
-							<h2>Nisl adipiscing</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>교목</h2>
+							<p>공자가 은행나무 아래서 강학했다는 것에서 유래된 행단은 흔히 선비들이 학문을 정진한다는 뜻<br>교정에 은행나무를 많이 심어 가꾸어 오고 있다.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
-							<h2>Tempus aliquam veroeros</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>교가</h2>
+							<p>성도고의 예전 교가는 <새찬송가> 348장인 "마귀들과 싸울지라" 곡조에 가사를 붙인 교가였으나 1988년부터 현 교가로 바뀌었다.</p>
+							<audio id ="music">
+								<source src="">
+							</audio>
+							<a href="javascript:void(0);" class="play">교가 재생</a>
+							<a href="javascript:void(0);" class="stop">정지</a>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
@@ -57,8 +62,8 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
-							<h2>Sed consequat phasellus</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>출신인물 - 피램(오르비 학원)</h2>
+							<p>2014년 성도고등학교를 졸업하였다. 고려대학교 가정교육과에 재학중이다. <br>또한 오르비 클래스 강사로도 활동했으며 현재 오르비 학원에서 강의 중이다.</p>
 
 					</div>
 
@@ -93,7 +98,7 @@
 							<div>
 								<section>
 									<h2>지도</h2>
-									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3260.528507773279!2d129.0040602764017!3d35.193302356621984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568ead21937abdd%3A0x928f4fce8f27da25!2z7ISx64-E6rOg65Ox7ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1670563866684!5m2!1sko!2skr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3260.528507773279!2d129.0040602764017!3d35.193302356621984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568ead21937abdd%3A0x928f4fce8f27da25!2z7ISx64-E6rOg65Ox7ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1670563866684!5m2!1sko!2skr" width="100%" height="75%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 										</ul>
 									</form>
 								</section>
