--- a/html5up-multiverse/index.html
+++ b/html5up-multiverse/index.html
@@ -31,21 +31,21 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt="" /></a>
+							<a href="images/fulls/01.png" class="image"><img src="images/thumbs/01-1.png" alt="" /></a>
 							<h2>교화</h2>
 							<p>진달래의 꽃말은 '절제'로 항상 절제하며 불굴의 용기와 자신감을 가지고 학업에 정진하라는 의미를 담고 있다.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
+							<a href="images/fulls/02.png" class="image"><img src="images/thumbs/02.png" alt="" /></a>
 							<h2>교목</h2>
 							<p>공자가 은행나무 아래서 강학했다는 것에서 유래된 행단은 흔히 선비들이 학문을 정진한다는 뜻<br>교정에 은행나무를 많이 심어 가꾸어 오고 있다.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
+							<a href="images/fulls/03.png" class="image"><img src="images/thumbs/03-1.png" alt="" /></a>
 							<h2>교가</h2>
 							<p>성도고의 예전 교가는 <새찬송가> 348장인 "마귀들과 싸울지라" 곡조에 가사를 붙인 교가였으나 1988년부터 현 교가로 바뀌었다.</p>
 							<audio id ="music">
-								<source src="">
+								<source src="교가.mp4">
 							</audio>
 							<a href="javascript:void(0);" class="play">교가 재생</a>
 							<a href="javascript:void(0);" class="stop">정지</a>
@@ -83,12 +83,11 @@
 								<section>
 									<h2>Follow me on ...</h2>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://www.youtube.com/@user-zo2rs7yi1d" class="icon brands fa-youtube"><span class="label">학교 유튜브</span></a></li>
+										<li><a href="https://www.instagram.com/sungdo.official/" class="icon brands fa-instagram"><span class="label">학교 공식인스타그램</span></a></li>
+										<li><a href="https://www.instagram.com/sungdo__prestigious/" class="icon brands fa-instagram"><span class="label">학생회 인스타그램</span></a></li>
+										<li><a href="https://school.busanedu.net/sungdo-h/main.do" class="icon brands fa-school"><span class="label">학교 홈페이지</span></a></li>
+										
 									</ul>
 								</section>
 								<p class="copyright">
