--- a/html5up-multiverse/index.html
+++ b/html5up-multiverse/index.html
@@ -78,7 +78,7 @@
 										<li><a href="index.html">학교소개홈페이지</a></li>
 									</ul>
 									<h2>Magna feugiat sed adipiscing</h2>
-									<p>Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum eget quis orci mattis aliquet. Maecenas fringilla et ante at lorem et ipsum. Dolor nulla eu bibendum sapien. Donec non pharetra dui. Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum.</p>
+									<p>ㄻㄴ엄메ㅐ메ㅐㄴㅇ패ㅔㅏㅁ네ㅐㅇ프ㅔㅐㅁ능피므닢으ㅔㅐㅁㄴ읖;ㅣㅁ능ㅍ;ㅡㅔㅐt scelerisque turpis ipsum.</p>
 								</section>
 								<section>
 									<h2>Follow me on ...</h2>
@@ -86,7 +86,7 @@
 										<li><a href="https://www.youtube.com/@user-zo2rs7yi1d" class="icon brands fa-youtube"><span class="label">학교 유튜브</span></a></li>
 										<li><a href="https://www.instagram.com/sungdo.official/" class="icon brands fa-instagram"><span class="label">학교 공식인스타그램</span></a></li>
 										<li><a href="https://www.instagram.com/sungdo__prestigious/" class="icon brands fa-instagram"><span class="label">학생회 인스타그램</span></a></li>
-										<li><a href="https://school.busanedu.net/sungdo-h/main.do" class="icon brands fa-school"><span class="label">학교 홈페이지</span></a></li>
+										<li><a href="https://school.busanedu.net/sungdo-h/main.do" class="icon brands fa-solid fa-school"><span class="label">학교 홈페이지</span></a></li>
 										
 									</ul>
 								</section>
@@ -97,7 +97,7 @@
 							<div>
 								<section>
 									<h2>지도</h2>
-									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3260.528507773279!2d129.0040602764017!3d35.193302356621984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568ead21937abdd%3A0x928f4fce8f27da25!2z7ISx64-E6rOg65Ox7ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1670563866684!5m2!1sko!2skr" width="100%" height="75%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3260.528507773279!2d129.0040602764017!3d35.193302356621984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568ead21937abdd%3A0x928f4fce8f27da25!2z7ISx64-E6rOg65Ox7ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1670563866684!5m2!1sko!2skr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 										</ul>
 									</form>
 								</section>
