--- a/html5up-multiverse/index.html
+++ b/html5up-multiverse/index.html
@@ -41,7 +41,7 @@
 							<p>공자가 은행나무 아래서 강학했다는 것에서 유래된 행단은 흔히 선비들이 학문을 정진한다는 뜻<br>교정에 은행나무를 많이 심어 가꾸어 오고 있다.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/03.png" class="image"><img src="images/thumbs/03-1.png" alt="" /></a>
+							<a href="images/fulls/03.png" class="image"><img src="images/thumbs/성도고 아이콘.png" alt="" /></a>
 							<h2>교가</h2>
 							<p>성도고의 예전 교가는 <새찬송가> 348장인 "마귀들과 싸울지라" 곡조에 가사를 붙인 교가였으나 1988년부터 현 교가로 바뀌었다.</p>
 							<audio id ="music">
@@ -61,7 +61,7 @@
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
+							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.png" alt="" /></a>
 							<h2>출신인물 - 피램(오르비 학원)</h2>
 							<p>2014년 성도고등학교를 졸업하였다. 고려대학교 가정교육과에 재학중이다. <br>또한 오르비 클래스 강사로도 활동했으며 현재 오르비 학원에서 강의 중이다.</p>
 
