--- a/html5up-multiverse/index.html
+++ b/html5up-multiverse/index.html
@@ -31,7 +31,7 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="images/fulls/01.png" class="image"><img src="images/thumbs/01-1.png" alt="" /></a>
+							<a href="images/fulls/01.png" class="image"><img src="images/thumbs/01.png" alt="" /></a>
 							<h2>교화</h2>
 							<p>진달래의 꽃말은 '절제'로 항상 절제하며 불굴의 용기와 자신감을 가지고 학업에 정진하라는 의미를 담고 있다.</p>
 						</article>
