--- a/html5up-multiverse/index.html
+++ b/html5up-multiverse/index.html
@@ -41,14 +41,10 @@
 							<p>공자가 은행나무 아래서 강학했다는 것에서 유래된 행단은 흔히 선비들이 학문을 정진한다는 뜻<br>교정에 은행나무를 많이 심어 가꾸어 오고 있다.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/03.png" class="image"><img src="images/thumbs/성도고 아이콘.png" alt="" /></a>
+							<a href="images/fulls/03.png" class="image"><img src="images/thumbs/03.png" alt="" /></a>
 							<h2>교가</h2>
 							<p>성도고의 예전 교가는 <새찬송가> 348장인 "마귀들과 싸울지라" 곡조에 가사를 붙인 교가였으나 1988년부터 현 교가로 바뀌었다.</p>
-							<audio id ="music">
-								<source src="교가.mp4">
-							</audio>
-							<a href="javascript:void(0);" class="play">교가 재생</a>
-							<a href="javascript:void(0);" class="stop">정지</a>
+							<iframe src="schoolsong.mp3" id="audio"></iframe>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
@@ -97,7 +93,7 @@
 							<div>
 								<section>
 									<h2>지도</h2>
-									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3260.528507773279!2d129.0040602764017!3d35.193302356621984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568ead21937abdd%3A0x928f4fce8f27da25!2z7ISx64-E6rOg65Ox7ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1670563866684!5m2!1sko!2skr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3260.528507773279!2d129.0040602764017!3d35.193302356621984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568ead21937abdd%3A0x928f4fce8f27da25!2z7ISx64-E6rOg65Ox7ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1670563866684!5m2!1sko!2skr" width="100%" height="450px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 										</ul>
 									</form>
 								</section>
