--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>최하단 내용</h2>
+										<h2>학교 소개 홈페이지</h2>
 									</header>
-									<p>제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  제일 끝  ㅍ</p>
+									<h2>성도고등학교 소개 홈페이지입니다.</h2>
 									<ul class="actions">
-										<li><a href="html5up-multiverse/index.html" class="button next">시작하기</a></li>
+										<li><a href="html5up-multiverse/index.html" class="button next"></a></li>
 									</ul>
 								</div>
 							</section>
