--- a/html5up-multiverse/index.html
+++ b/html5up-multiverse/index.html
@@ -44,7 +44,7 @@
 							<a href="images/fulls/03.png" class="image"><img src="images/thumbs/03.png" alt="" /></a>
 							<h2>교가</h2>
 							<p>성도고의 예전 교가는 <새찬송가> 348장인 "마귀들과 싸울지라" 곡조에 가사를 붙인 교가였으나 1988년부터 현 교가로 바뀌었다.</p>
-							<iframe src="schoolsong.mp3" id="audio"></iframe>
+							<iframe src="schoolsong.mp3" id="audio" style="border:none"></iframe>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
@@ -82,7 +82,7 @@
 										<li><a href="https://www.youtube.com/@user-zo2rs7yi1d" class="icon brands fa-youtube"><span class="label">학교 유튜브</span></a></li>
 										<li><a href="https://www.instagram.com/sungdo.official/" class="icon brands fa-instagram"><span class="label">학교 공식인스타그램</span></a></li>
 										<li><a href="https://www.instagram.com/sungdo__prestigious/" class="icon brands fa-instagram"><span class="label">학생회 인스타그램</span></a></li>
-										<li><a href="https://school.busanedu.net/sungdo-h/main.do" class="icon brands fa-solid fa-school"><span class="label">학교 홈페이지</span></a></li>
+										<li><a href="https://school.busanedu.net/sungdo-h/main.do" class="icon brands fa-house"><span class="label">학교 홈페이지</span></a></li>
 										
 									</ul>
 								</section>
