--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
 					<header id="header" class="alt">
 						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
 						<nav>
-							<a href="#menu">Menu</a>
+							<a href="#menu">메뉴</a>
 						</nav>
 					</header>
 
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
+							<li><a href="index.html">처음으로</a></li>
+							<li><a href="html5up-multiverse/index.html">학교소개홈페이지</a></li>
+							
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">시작하기</a></li>
@@ -148,7 +148,7 @@
 									</header>
 									<h2>성도고등학교 소개 홈페이지입니다.</h2>
 									<ul class="actions">
-										<li><a href="html5up-multiverse/index.html" class="button next"></a></li>
+										<li><a href="html5up-multiverse/index.html" class="button next">보러가기</a></li>
 									</ul>
 								</div>
 							</section>
