--- a/html5up-multiverse/index.html
+++ b/html5up-multiverse/index.html
@@ -44,7 +44,7 @@
 							<a href="images/fulls/03.png" class="image"><img src="images/thumbs/03.png" alt="" /></a>
 							<h2>교가</h2>
 							<p>성도고의 예전 교가는 <새찬송가> 348장인 "마귀들과 싸울지라" 곡조에 가사를 붙인 교가였으나 1988년부터 현 교가로 바뀌었다.</p>
-							<iframe src="schoolsong.mp3" id="audio" style="border:none"></iframe>
+							<iframe src="schoolsong.mp3" id="audio"></iframe>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
