--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
 				<!-- Banner -->
 					<section id="banner" class="major">
 						<div class="inner">
+							<video muted autoplay loop>
+								<source src="assets/homepage.mp4" type="video/mp4">
+								<strong>Your browser does not support the video tag.</strong>
+							</video>
 							<header class="major">
 								<h1>성도고 <span style="color:rosybrown"> MSE 동아리</span> 홈페이지</h1>
 							</header>
