--- a/html5up-multiverse/index.html
+++ b/html5up-multiverse/index.html
@@ -50,7 +50,7 @@
 							<a href="images/fulls/05-1.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
 							</article>
 						<article class="thumb">
-							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.png" alt="" /></a>
+							<a href="images/fulls/06.png" class="image"><img src="images/thumbs/06.png" alt="" /></a>
 							
 					</div>
 
