--- a/html5up-multiverse/index.html
+++ b/html5up-multiverse/index.html
@@ -47,7 +47,7 @@
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/05-1.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
+							<a href="images/fulls/05-1.png" class="image"><img src="images/thumbs/05.png" alt="" /></a>
 							</article>
 						<article class="thumb">
 							<a href="images/fulls/06.png" class="image"><img src="images/thumbs/06.png" alt="" /></a>
