--- a/html5up-multiverse/index.html
+++ b/html5up-multiverse/index.html
@@ -39,7 +39,7 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/03.png" class="image"><img src="images/thumbs/03.png" alt="" /></a>
-							<iframe src="schoolsong.mp3" id="audio"></iframe>
+							<!-- <iframe src="schoolsong.mp3" id="audio"></iframe> -->
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
