--- a/html5up-multiverse/index.html
+++ b/html5up-multiverse/index.html
@@ -72,7 +72,7 @@
 										<li><a href="https://www.youtube.com/@user-zo2rs7yi1d" class="icon brands fa-youtube"><span class="label">학교 유튜브</span></a></li>
 										<li><a href="https://www.instagram.com/sungdo.official/" class="icon brands fa-instagram"><span class="label">학교 공식인스타그램</span></a></li>
 										<li><a href="https://www.instagram.com/sungdo__prestigious/" class="icon brands fa-instagram"><span class="label">학생회 인스타그램</span></a></li>
-										<li><a href="https://school.busanedu.net/sungdo-h/main.do" class="icon brands fa-speakap"><span class="label">학교 홈페이지</span></a></li>
+										<li><a href="http://sungdo.hs.kr//" class="icon brands fa-speakap"><span class="label">학교 홈페이지</span></a></li>
 										
 									</ul>
 								</section>
