--- a/html5up-multiverse/index.html
+++ b/html5up-multiverse/index.html
@@ -32,24 +32,29 @@
 					<div id="main">
 						<article class="thumb">
 							<a href="images/fulls/01.png" class="image"><img src="images/thumbs/01.png" alt="" /></a>
+							<h2>성도고 교화</h2>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/02.png" class="image"><img src="images/thumbs/02.png" alt="" /></a>
-							
+							<h2>성도고 교목</h2>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/03.png" class="image"><img src="images/thumbs/03.png" alt="" /></a>
+							<h2>성도고 교가</h2>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
-							<h2>형준이 ^^</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/04.png" class="image"><img src="images/thumbs/04-1.png" alt="" /></a>
+							<h2>성도고 동복/하복</h2>
+							<p></p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/05.png" class="image"><img src="images/thumbs/05-1.png" alt="" /></a>
-							</article>
+							h2>성도고 출신인물 1</h2>
+						</article>
 						<article class="thumb">
 							<a href="images/fulls/06.png" class="image"><img src="images/thumbs/06.png" alt="" /></a>
+							h2>성도고 출신인물 2</h2>
+						</article>
 							
 					</div>
 
@@ -63,8 +68,9 @@
 										<li><a href="http://www.sungdomsehomepages1.kro.kr/">처음으로</a></li>
 										<li><a href="index.html">학교소개홈페이지</a></li>
 									</ul>
-									<h2>Magna feugiat sed adipiscing</h2>
-									<p>ㄻㄴ엄메ㅐ메ㅐㄴㅇ패ㅔㅏㅁ네ㅐㅇ프ㅔㅐㅁ능피므닢으ㅔㅐㅁㄴ읖;ㅣㅁ능ㅍ;ㅡㅔㅐt scelerisque turpis ipsum.</p>
+									<h2>성도고 소개영상</h2>
+									<iframe width="560" height="315" src="https://www.youtube.com/embed/aq8rI-znqlY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									<p>미래사회를 선도하는 창의인재 육성! <br>44년 역사를 자랑하는 성도고등학교 입니다. <br>'우리의 꿈, 야 너도 성도인 될 수 있어'</p>
 								</section>
 								<section>
 									<h2>Follow me on ...</h2>
@@ -77,7 +83,7 @@
 									</ul>
 								</section>
 								<p class="copyright">
-									&copy; Unttled. Design: <a href="http://html5up.net">HTML5 UP</a>.
+									&copy; . Design: <a href="http://html5up.net">성도MSE홈페이지제작팀, html5up-multiverse 디자인차용</a>.
 								</p>
 							</div>
 							<div>
