--- a/html5up-multiverse/index.html
+++ b/html5up-multiverse/index.html
@@ -69,7 +69,7 @@
 										<li><a href="index.html">학교소개홈페이지</a></li>
 									</ul>
 									<h2>성도고 소개영상</h2>
-									<iframe width="560" height="315" src="https://www.youtube.com/embed/aq8rI-znqlY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									<iframe width="100%" height="56.25%" src="https://www.youtube.com/embed/aq8rI-znqlY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									<p>미래사회를 선도하는 창의인재 육성! <br>44년 역사를 자랑하는 성도고등학교 입니다. <br>'우리의 꿈, 야 너도 성도인 될 수 있어'</p>
 								</section>
 								<section>
