--- a/html5up-multiverse/index.html
+++ b/html5up-multiverse/index.html
@@ -23,7 +23,7 @@
 						<h1><a href="index.html"><strong>성도고</strong>소개홈페이지</a></h1>
 						<nav>
 							<ul>
-								<li><a href="#footer" class="icon solid fa-info-circle">About</a></li>
+								<li><a href="#footer" class="icon solid fa-bars">더보기</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -73,12 +73,12 @@
 									<p>미래사회를 선도하는 창의인재 육성! <br>44년 역사를 자랑하는 성도고등학교 입니다. <br>'우리의 꿈, 야 너도 성도인 될 수 있어'</p>
 								</section>
 								<section>
-									<h2>Follow me on ...</h2>
+									<h2>성도 SNS</h2>
 									<ul class="icons">
 										<li><a href="https://www.youtube.com/@user-zo2rs7yi1d" class="icon brands fa-youtube"><span class="label">학교 유튜브</span></a></li>
 										<li><a href="https://www.instagram.com/sungdo.official/" class="icon brands fa-instagram"><span class="label">학교 공식인스타그램</span></a></li>
 										<li><a href="https://www.instagram.com/sungdo__prestigious/" class="icon brands fa-instagram"><span class="label">학생회 인스타그램</span></a></li>
-										<li><a href="http://sungdo.hs.kr//" class="icon brands fa-speakap"><span class="label">학교 홈페이지</span></a></li>
+										<li><a href="http://sungdo.hs.kr//" class="icon solid fa-school"><span class="label">학교 홈페이지</span></a></li>
 										
 									</ul>
 								</section>
