--- a/index.html
+++ b/index.html
@@ -52,18 +52,15 @@
 				<!-- Banner -->
 					<section id="banner" class="major">
 						<div class="inner">
-							<span class = "video">
-								<video muted autoplay loop>
-									<source src="assets/homepage.mp4" type="video/mp4" alt="" />
-									<strong>Your browser does not support the video tag.</strong>
-								</video>
-							</span> 
+							<span class="image">
+								<img src="images/banner.jpg" alt="" />
+							</span>
 							<header class="major">
 								<h1>성도고 <span style="color:rosybrown"> MSE 동아리</span> 홈페이지</h1>
 							</header>
 							<div class="content">
-								<p>일단 여기까지가 소개글 1  그 다음에 <br />
-								여기서 내용이 다시 이어지는 표현</p>
+								<p>MSE동아리 소개 홈페이지입니다.<br />
+								학예회기간동안 운영됩니다.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">버튼을 눌러 시작하기</a></li>
 								</ul>
