--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 -->
 <html>
 	<head>
-		<title>Forty by HTML5 UP</title>
+		<title>성도고등학교MSE홈페이지</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -59,8 +59,7 @@
 								<h1>성도고 <span style="color:rosybrown"> MSE 동아리</span> 홈페이지</h1>
 							</header>
 							<div class="content">
-								<p>MSE동아리 소개 홈페이지입니다.<br />
-								학예회기간동안 운영됩니다.</p>
+								<p>MSE동아리 소개 홈페이지입니다. <br>학예회기간동안 운영됩니다.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">버튼을 눌러 시작하기</a></li>
 								</ul>
