--- a/generic (1).html
+++ b/generic (1).html
@@ -47,9 +47,7 @@
 										<h1>Generic</h1>
 									</header>
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-									<p>단락1단락1단락1단락1단락12345567락1단락1단락1단락1단락1단락1단락gghbhkbkbjkggdfgdfgsdfgsdfgsdgsdfglbkbllkjblkjblkb1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1</p>
-									<p>단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2sdfgsdfgsdgsdfgsdfgsdf단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2</p>
-									<p>단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3</p>
+									<h6>HTML을 활용하여 성도고등학교와 M.S.E 동아리의 여러 활동을 소개하는 홈페이지로 M.S.E 동아리의 무선 조종 RC카, 하키 게임,건축 시뮬레이션, 키오스크가 소개되어있으며 성도고등학교의 교복, 교화 등 다양한 정보를 알 수 있는 정보의 창임.</h6>
 								</div>
 							</section>
 
