--- a/generic (3).html
+++ b/generic (3).html
@@ -47,9 +47,9 @@
 										<h1>Generic</h1>
 									</header>
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-									<p>단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1단락1</p>
-									<p>단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락snsnwjauqnqjqnq2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2단락2</p>
-									<p>단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3단락3</p>
+									<p>아두이노를 활용하여 자동차 알고리즘을 만들고 만든 알고리즘을 실제로 미니 자동차에 적용해봄 </p>
+									<p></p>
+									<p></p>
 								</div>
 							</section>
 
